! Fixed JumpTo function when pretty URLs were disabled. It's also now one byte smaller... I'm mental. Don't go near me. (script.js) ! In some cases, at least on my local install, filesize() will sometimes fail even if file_exists() returns true. Added a @ to suppress the error. (Subs-Cache.php) - Removed text-overflow from CSS exceptions. From what I could gather on caniuse.com, only older versions of Opera need a prefix, meaning it's a stabilized rule, so let's not waste time on this. I'm not exactly sure why I added it in the first place, so I may have to revert later. (Subs-Cache.php) ! Fixed icon positions in topic moderation bar. (Worg/index.member.css) * Simplified button list styling. (Worg/sections.css)

--- a/Themes/default/skins/Worg/index.member.css
+++ b/Themes/default/skins/Worg/index.member.css
@@ -20,7 +20,7 @@ ul.buttonlist
 	a.lock, a.pin, a.add_poll
 		padding-left: 22px
 		background-image: url($images/small_lock.gif)
-		background-position: 6px 5px
+		background-position: 6px 2px
 		background-repeat: no-repeat
 	a.pin
 		padding-left: 23px
